--- a/.travis.yml
+++ b/.travis.yml
@@ -37,7 +37,7 @@ matrix:
     - rust: nightly
       name: cargo doc
       script:
-        - RUSTDOCFLAGS=-Dwarnings cargo doc --no-deps
+        - cargo doc --no-deps
 
 before_script:
   - set -o errexit
