--- a/examples/other-way/Cargo.toml
+++ b/examples/other-way/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "other-way2"
+name = "other-way"
 version = "0.0.0"
 authors = ["Taiki Endo <te316e89@gmail.com>"]
 edition = "2018"
@@ -8,5 +8,3 @@ publish = false
 [features]
 std = []
 alloc = []
-
-default = ["alloc"]
