--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ categories = ["rust-patterns", "no-std"]
 exclude = ["/.travis.yml"]
 
 [workspace]
-members = ["examples/other-way", "examples/alloc-shim"]
+members = ["examples/other-way", "examples/alloc-shim", "examples/std-shim"]
 
 [badges]
 travis-ci = { repository = "taiki-e/alloc-shim" }
