--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "alloc-shim"
 # NB: When modifying, also modify html_root_url in lib.rs
-version = "0.2.0"
+version = "0.2.1"
 authors = ["Taiki Endo <te316e89@gmail.com>"]
 edition = "2018"
 license = "Apache-2.0/MIT"
@@ -25,3 +25,6 @@ name = "alloc"
 [features]
 std = []
 alloc = []
+
+[package.metadata.docs.rs]
+features = ["alloc"]
