--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,10 @@ matrix:
   fast_finish: true
 
   include:
+    # This is the minimum Rust version supported by alloc-shim.
     # When updating this, the reminder to update the minimum required version in README.md.
     - rust: 1.31.0
+
     - rust: stable
     - rust: nightly
       script:
