--- a/examples/alloc-shim/Cargo.toml
+++ b/examples/alloc-shim/Cargo.toml
@@ -11,3 +11,4 @@ alloc-shim = { path = "../..", version = "0.3" }
 [features]
 std = ["alloc", "alloc-shim/std"]
 alloc = ["alloc-shim/alloc"]
+nightly = []
