--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,8 +17,7 @@ exclude = ["/.travis.yml"]
 members = ["examples/other-way", "examples/alloc-shim"]
 
 [badges]
-# https://github.com/rust-lang/crates.io/issues/1392
-# travis-ci = { repository = "taiki-e/alloc-shim" }
+maintenance = { status = "deprecated" }
 
 [lib]
 name = "alloc"
