--- a/examples/alloc-shim/Cargo.toml
+++ b/examples/alloc-shim/Cargo.toml
@@ -9,6 +9,5 @@ publish = false
 alloc-shim = { path = "../..", version = "0.3" }
 
 [features]
-std = ["alloc", "alloc-shim/std"]
+std = ["alloc-shim/std"]
 alloc = ["alloc-shim/alloc"]
-nightly = []
