Tweak Cargo.toml

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,14 +1,17 @@
 [package]
 name = "alloc-shim"
-# NB: When modifying, also modify html_root_url in lib.rs
 version = "0.3.4"
 authors = ["Taiki Endo <te316e89@gmail.com>"]
 edition = "2018"
 license = "Apache-2.0/MIT"
-description = "A shim crate for to import items of alloc crate ergonomically."
 repository = "https://github.com/taiki-e/alloc-shim"
-documentation = "https://docs.rs/alloc-shim/"
 readme = "README.md"
+description = """
+A shim crate for to import items of alloc crate ergonomically.
+"""
+
+[package.metadata.docs.rs]
+features = ["alloc"]
 
 [badges]
 maintenance = { status = "deprecated" }
@@ -19,6 +22,3 @@ name = "alloc"
 [features]
 std = []
 alloc = []
-
-[package.metadata.docs.rs]
-features = ["alloc"]
