--- a/.editorconfig
+++ b/.editorconfig
@@ -1,5 +1,5 @@
 # EditorConfig configuration
-# http://EditorConfig.org
+# https://editorconfig.org
 
 # Top-most EditorConfig file
 root = true
@@ -16,7 +16,7 @@ charset = utf-8
 indent_style = space
 indent_size = 4
 
-# Match yaml/markdown, set 2 space indentation
-[*.{yml,md}]
+# Match json/yaml/markdown, set 2 space indentation
+[*.{json,yml,md}]
 indent_style = space
 indent_size = 2
