--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
-.DS_Store
-.idea/
-.vscode/
-target/
+target
 **/*.rs.bk
 Cargo.lock
-___*
+
+# For platform and editor specific settings, it is recommended to add to
+# a global .gitignore file.
+# Refs: https://help.github.com/en/articles/ignoring-files#create-a-global-gitignore
