--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "alloc-shim"
 version = "0.3.4"
 authors = ["Taiki Endo <te316e89@gmail.com>"]
 edition = "2018"
-license = "Apache-2.0/MIT"
+license = "Apache-2.0 OR MIT"
 repository = "https://github.com/taiki-e/alloc-shim"
 readme = "README.md"
 description = """
